RESOLVED FIXED 279529
AX: ENABLE_AX_THREAD_TEXT_APIS = 1 does not build
https://bugs.webkit.org/show_bug.cgi?id=279529
Summary AX: ENABLE_AX_THREAD_TEXT_APIS = 1 does not build
Joshua Hoffman
Reported 2024-09-11 11:39:22 PDT
There are some new build failures when enabling ENABLE_AX_THREAD_TEXT_APIS
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-11 11:39:32 PDT
Joshua Hoffman
Comment 2 2024-09-11 11:55:00 PDT
EWS
Comment 3 2024-09-11 18:17:07 PDT
Committed 283516@main (52254099de12): <https://commits.webkit.org/283516@main> Reviewed commits have been landed. Closing PR #33479 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.