AX: ENABLE_AX_THREAD_TEXT_APIS = 1 does not build https://bugs.webkit.org/show_bug.cgi?id=279529 rdar://135815948

Reviewed by Tyler Wilcock.

When ENABLE_AX_THREAD_TEXT_APIS is enabled, we have some new build failures, and this patch resolves
those.

* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::streamTextRuns):
* Source/WebCore/accessibility/AXTextRun.h:
(WebCore::AXTextRun::debugDescription const):

Canonical link: https://commits.webkit.org/283516@main